top banner added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mahmudul's Portfolio</title>
+    <title>Mahmud's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="my-intro">
+            <h1>Welcome to</h1>
+            <h1> <span class="orange-color">Mahmudul's</span>  Inventory!</h1>
+            <h3>Beginner Web Developer</h3>
+            <p>This is S.M. Mahmudul Hasan Rudra currently studying in Brac University. Beside studying, I am trying to learn web development. This will be my first portfolio website. Before that I have learnt java swing and make some projects on java swing.</p>
+
+            <a class="link-button" href="https://www.google.com/" target="_blank">Hire Me</a>
+        </div>
+
+        <div class="my-image">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
