--- a/index.html
+++ b/index.html
@@ -25,5 +25,17 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
+
+    <section class="middle-banner">
+        <div class="my-image-two">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="dream-big">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>Till now I am done with HTML and CSS. I can build any simple website. I will not give up this time. In Shaa Allah I will learn how to make advanced website and from now on I am starting working on this.</p>
+            <a class="link-button" href="https://www.google.com/" target="_blank">Download Resume</a>
+        </div>
+    </section>
 </body>
 </html>
