--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="my-intro">
             <h1>Welcome to</h1>
             <h1> <span class="orange-color">Mahmudul's</span>  Inventory!</h1>
@@ -26,16 +26,36 @@
         </div>
     </section>
 
-    <section class="middle-banner">
-        <div class="my-image-two">
+    <section class="middle-banner flexible-container">
+        <div class="my-image">
             <img src="images/jhankar2.png" alt="">
         </div>
-        <div class="dream-big">
+        <div class="my-intro">
             <h1>Dream Big</h1>
             <h3>Become a web developer</h3>
             <p>Till now I am done with HTML and CSS. I can build any simple website. I will not give up this time. In Shaa Allah I will learn how to make advanced website and from now on I am starting working on this.</p>
             <a class="link-button" href="https://www.google.com/" target="_blank">Download Resume</a>
         </div>
     </section>
+
+    <section class="last-banner">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+            <div id="full-stack-experience" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2022- present|Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="web-dev-experience" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2022-Present | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>© Mahmudul Hasan 2022, a Programming Hero initiative.</p>
+    </footer>
 </body>
 </html>
