--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h3>Beginner Web Developer</h3>
             <p>This is S.M. Mahmudul Hasan Rudra currently studying in Brac University. Beside studying, I am trying to learn web development. This will be my first portfolio website. Before that I have learnt java swing and make some projects on java swing.</p>
 
-            <a class="link-button" href="https://www.google.com/" target="_blank">Hire Me</a>
+            <a class="link-button" href="https://www.linkedin.com/in/s-m-mahmudul-hasan-rudra-77b8ba1ba/" target="_blank">Hire Me</a>
         </div>
 
         <div class="my-image">
@@ -34,7 +34,7 @@
             <h1>Dream Big</h1>
             <h3>Become a web developer</h3>
             <p>Till now I am done with HTML and CSS. I can build any simple website. I will not give up this time. In Shaa Allah I will learn how to make advanced website and from now on I am starting working on this.</p>
-            <a class="link-button" href="https://www.google.com/" target="_blank">Download Resume</a>
+            <a class="link-button" href="https://www.linkedin.com/in/s-m-mahmudul-hasan-rudra-77b8ba1ba/" target="_blank">Download Resume</a>
         </div>
     </section>
 
